scrolled issue fixed on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,18 @@
 @import "tailwindcss";
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html,
+body {
+    overflow-x: hidden;
+    width: 100%;
+    max-width: 100vw;
+}
+
+body {
+    position: relative;
+}
